force-app/main/default/objects/LeadScoring__c/LeadScoring__c.object-meta.xml
<CustomObject>
    <description>Lead Scoring Setting Table</description>
    <label>Lead Scoring</label>
    <nameField>
        <label>Lead Scoring Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Scoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>