force-app/main/default/objects/LeadScoring__c/fields/Binary_Value__c.field-meta.xml
<CustomField>
    <fullName>Binary_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Binary Value of the field related to the score</description>
    <label>Binary Value</label>
    <type>Checkbox</type>
</CustomField>