force-app/main/default/objects/LeadScoring__c/fields/Comparison__c.field-meta.xml
<CustomField>
    <fullName>Comparison__c</fullName>
    <description>The comparison to be used for scoring</description>
    <label>Comparison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Number Range</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Is Null</fullName>
            </value>
            <value>
                <fullName>Text Mid</fullName>
            </value>
            <value>
                <fullName>Text Equals</fullName>
            </value>
            <value>
                <fullName>Text Mid List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>