force-app/main/default/objects/LeadScoring__c/fields/Days_to_Reset__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Reset__c</fullName>
    <description>Number of Days to Reset the score of the Object</description>
    <label>Days to Reset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>