force-app/main/default/objects/LeadScoring__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The Field related to the scoring</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>