force-app/main/default/objects/LeadScoring__c/fields/KeyBrand__c.field-meta.xml
<CustomField>
    <fullName>KeyBrand__c</fullName>
    <description>The Key Brand related to the scoring</description>
    <label>Key Brand</label>
    <length>18</length>
    <type>Text</type>
</CustomField>