force-app/main/default/objects/LeadScoring__c/fields/Number_Value__c.field-meta.xml
<CustomField>
    <fullName>Number_Value__c</fullName>
    <description>The Number Value for field of related scoring</description>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>