force-app/main/default/objects/LeadScoring__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The Object related to the scoring</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>