force-app/main/default/objects/LeadScoring__c/fields/Range_Max__c.field-meta.xml
<CustomField>
    <fullName>Range_Max__c</fullName>
    <description>The number range max value of related scoring</description>
    <label>Range Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>