force-app/main/default/objects/LeadScoring__c/fields/Range_Min__c.field-meta.xml
<CustomField>
    <fullName>Range_Min__c</fullName>
    <description>The range min of number value for field related to scoring</description>
    <label>Range Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>