force-app/main/default/objects/LeadScoring__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>The RecordType of the Object related to the score</description>
    <label>RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>