force-app/main/default/objects/LeadScoring__c/fields/Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Value__c</fullName>
    <description>The text value of the field related to scoring</description>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>