force-app/main/default/objects/LeadScoring__c/fields/Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Field__c</fullName>
    <description>The Trigger Field of the history record. Only fill in when the Trigger Field is not the same as the score Field</description>
    <label>Trigger Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>