force-app/main/default/objects/LeadScoring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KeyBrand__c</columns>
    <columns>Market__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>